# daymet-pyprocessing

./: README.md  download_daymet.py  environment.yml  process_daymet.py  requirements.txt  setup.cfg
config/: aggregation-config.yml  clipping-config.yml  combining-config.yml  download-config-bbox.yml  download-config.yml  logging.yml  processing-config.yml
daymetpyprocessing/: download.py  download_daymet.py  ioutils.py  process_daymet.py  processing.py
scripts/: daymet.py  download.py  ioutils.py  processing.py
test/: test_daymet.py  test_download.py  test_processing.py
test/data/: features.geojson  test-download-config-bbox.yml  test-download-config.yml  test-processing-config.yml
