[metadata]
name = daymetpyprocessing
version = 0.1.0
url = https://github.com/SebaDro/daymet-pyprocessing
author = Sebastian Drost
author_email=sebastian.drost@hs-bochum.de
description = Package for downloading and processing Daymet datasets
long_description = file: README.md
keywords = Daymet, climate data
license = Apache-2.0 license
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    daymetpyprocessing
python_requires = >=3.7
install_requires =
    gdal
    fiona
    geopandas
    pyyaml
    requests
    h5netcdf
    xarray
    dask
    zarr

[options.entry_points]
    console_scripts =
        download_daymet = daymetpyprocessing.download_daymet:main
        process_daymet = daymetpyprocessing.process_daymet:main